# StackScribe

./: .env  .env.example  .gitignore  DOCKER_INTEGRATION.md  LOCAL_AI_INTEGRATION.md  README.md  bootstrap.ps1  bootstrap.sh  example-server.rs  index.html  mobile.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vite.mobile.ts  vitest.config.ts
.github/workflows/: ci.yml
archives/arch/: archive.json
archives/archive2/: archive.json
archives/my archive/: archive.json
archives/new archive/: archive.json
archives/new2/: archive.json
archives/stack/: archive.json
archives/test/: archive.json
archives/tester/: archive.json
archives/thisisArchive/: archive.json
data/migrations/: 001_initial_schema.sql  002_add_requirement_clarity.sql
migrations/: 001_initial_schema.sql
scripts/: setup-android-emulator.ps1
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai_commands.rs  commands.rs  database.rs  db_utils.rs  lib.rs  main.rs  stripe_api.rs  types.rs
src/Styles/: AIServiceManager.css  App.css  CustomHeaderBar.css  Dialog.css  Editor.css  NavPanel.css  Preferences.css  ResultsPane.css  SlashCommandPopover.css  StartupNotification.css  TitleBar.css
src/Themes/: previewTheme.ts  theme.ts
src/Utils/: AIUtils.tsx  AppUtils.tsx  MarkdownTools.tsx  detectAmbiguity.ts  generateRequirement.ts  slashCommands.ts
src/api/: client.ts
src/components/: AILinkSuggestions.tsx  AIServiceManager.tsx  AppMenuBar.tsx  ArchiveList.tsx  ArchiveSelect.tsx  ArchiveTree.tsx  Card.tsx  ConfirmPopover.tsx  CustomHeaderBar.tsx  EntryItem.tsx  EntryList.tsx  EntryView.tsx  LoadingOverlay.tsx  MpEditor.tsx  NamePrompt.tsx  NavIconButton.tsx  NewEntryPrompt.tsx  NewTomePrompt.tsx  Preferences.tsx  PreviewPanel.tsx  ResultsPane.tsx  SlashCommandPopover.tsx  StartWindow.tsx  StartupNotification.tsx  TabBar.tsx  TitleBar.tsx  TomeItem.tsx  TomeList.tsx  TreeHeader.tsx
src/components/ai/: AIChatPanel.tsx  AILinkSuggestions.tsx  AIServiceManager.tsx  ChatInput.tsx  ChatMessage.tsx  ChatStatusIndicator.tsx  EditSuggestionCard.tsx
src/components/archive/: ArchiveList.tsx  ArchiveSelect.tsx  StartWindow.tsx
src/components/dialogs/: ArchiveManageDialog.tsx  ArchivePrompt.tsx  ArchiveSelectDialog.tsx  NamePrompt.tsx  Preferences.tsx  StartupNotification.tsx
src/components/editor/: MpEditor.tsx  SlashCommandPopover.tsx
src/components/layout/: AppMenuBar.tsx  CustomHeaderBar.tsx  SearchResults.tsx  TabBar.tsx  TitleBar.tsx
src/components/sidebar/: ArchiveTree.tsx  TomeItem.tsx  TomeList.tsx  TreeEntryItem.tsx  TreeHeader.tsx
src/db/: 001_initial_schema.sql  README.md  stackscribe.db-shm  stackscribe.db-wal
src/hooks/: useAIChat.ts  useAISuggestions.ts  useAppState.ts  useArchiveManagement.ts  useEntryManagement.ts  useEntrySearch.ts  usePanelLayout.ts  useSyncManager.ts
src/lib/: custom-sync.ts  db.ts  initDb.ts  migrate.ts  sync.ts  testDb.ts
src/migrations/: 001_init.sql
src/mobile/: App.tsx  main.tsx
src/services/: aiChatService.ts  aiLinkService.ts  rustDatabaseService.ts  settingsService.ts
src/stores/: dataStore.ts
src/styles/: AIChatPanel.css  AILinkSuggestions.css  AIServiceManager.css  App.css  CustomHeaderBar.css  Dialog.css  Editor.css  NavPanel.css  Preferences.css  SlashCommandPopover.css  ThemePreview.css  TitleBar.css
src/test/: setup.ts
src/themes/: defaultAppDark.ts  defaultAppLight.ts  defaultDark.ts  defaultEditorDark.ts  defaultEditorLight.ts  defaultLight.ts  editorTheme.ts  theme.ts  themeContext.tsx  themeUtils.ts  types.ts
src/types/: Chunk.ts  archive.ts  chat.ts  entry.ts  finding.ts  remark-plugins.d.ts  requirement.ts  settings.ts  stack.ts  tome.ts
src/utils/: detectAmbiguity.ts  editorAIActions.ts  generateRequirement.ts  slashCommands.ts
stackscribe-ai-service/: Dockerfile  README.md  benchmark.py  deps.py  docker-compose.yml  docker-start.sh  heuristics.py  index-notes.py  main.py  pytest.ini  requirements-dev.txt  requirements.txt  run.py  settings.py  start.sh
stackscribe-ai-service/lib/: ambiguity_rules.py  chunking.py  heuristics.py  index-notes.py  json_extract.py  linking.py  llm.py
stackscribe-ai-service/routers/: chat.py  health.py  links.py  quality.py
stackscribe-ai-service/tests/: conftest.py
stackscribe-functions/: grant-sql-access.sql  host.json  local.settings.json  package-lock.json  package.json  tsconfig.json
stackscribe-functions/src/: app.ts
(+19 files in other folders)
