[package]
name = "stackscribe"
version = "0.1.0"
description = "Document your stack. Cast your code."
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "stackscribe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }


[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-sql = { version = "2.2.1", features = ["sqlite"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite"], default-features = false }
# AI/ML dependencies (lightweight alternatives)
# Note: candle deps commented out for now - can be added later for advanced models
# candle-core = "0.6.0"
# candle-nn = "0.6.0" 
# candle-transformers = "0.6.0"
# hf-hub = "0.3.2"
# tokenizers = "0.19.1"
# Text processing
regex = "1.10.2"
unicode-segmentation = "1.10.1"
# Utilities
chrono = { version = "0.4.38", features = ["serde"] }
tokio = { version = "1.40.0", features = ["full"] }
reqwest = { version = "0.12.12", features = ["json", "rustls-tls"], default-features = false }
# stripe = "0.0.5"  # Temporarily disabled
axum = "0.8.4"
dotenvy = "0.15.7"
tokio-stream = "0.1.17"
tokio-util = "0.7.10"


[features]
default = ["local-ai"]
local-ai = []
# Future: when adding candle deps back
# local-ai = ["candle-core", "candle-nn", "candle-transformers"]
# vector-search = ["faiss"]


