[package]
name = "stackscribe"
version = "0.1.0"
description = "Document your stack. Cast your code."
authors = ["you"]
edition = "2021"

[lib]
name = "stackscribe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[build]
script = "build.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
regex = "1.10.2"
unicode-segmentation = "1.10.1"
# Utilities
chrono = { version = "0.4.38", features = ["serde"] }
tokio = { version = "1.40.0", features = ["full"] }
reqwest = { version = "0.12.12", features = ["json", "rustls-tls"], default-features = false }
axum = "0.8.4"
dotenvy = "0.15.7"
tokio-stream = "0.1.17"
tokio-util = "0.7.10"


[features]
default = ["local-ai"]
local-ai = []



